# collaborative-robotics-2026-group5

./: .gitignore  pyproject.toml
docs/: remote_setup.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/dynamixel_workbench_toolbox/share/dynamixel_workbench_toolbox/: package.sh
install/interbotix_common_modules/share/interbotix_common_modules/: package.sh
install/interbotix_xs_driver/include/interbotix_xs_driver/: xs_common.hpp
install/interbotix_xs_driver/share/interbotix_xs_driver/: package.sh
install/interbotix_xs_modules/share/interbotix_xs_modules/: package.sh
install/interbotix_xs_msgs/share/interbotix_xs_msgs/: package.sh
install/interbotix_xs_sdk/share/interbotix_xs_sdk/: package.sh
install/tidybot_bringup/lib/tidybot_bringup/: diagnose_dynamixel.py  pick_up_block_sim_copy.py  test_base_real.py  test_full_robot.py  test_grippers_real.py  test_pan_tilt_real.py  test_planner_real.py  test_real_hardware.py  test_tf.py  test_torque_hold.py  (+1 more)
install/tidybot_client/share/tidybot_client/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tidybot_client/share/tidybot_client/cmake/: tidybot_clientConfig.cmake
install/tidybot_client/share/tidybot_client/config/: cyclone_dds_client.xml  fastdds_client.xml
install/tidybot_client/share/tidybot_client/launch/: client_rviz.launch.py  connect_robot.launch.py
install/tidybot_network_bridge/share/tidybot_network_bridge/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
ros2_ws/src/tidybot_bringup/: CMakeLists.txt
ros2_ws/src/tidybot_control/: setup.py
ros2_ws/src/tidybot_msgs/: CMakeLists.txt
simulation/assets/mujoco/: tidybot_wx200_bimanual.xml
(+199 files in other folders)
